WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246534
AX: AXPropertyName::SelectedChildren for tree-role objects is not updated when their tree-item children become selected
https://bugs.webkit.org/show_bug.cgi?id=246534
Summary
AX: AXPropertyName::SelectedChildren for tree-role objects is not updated whe...
Tyler Wilcock
Reported
2022-10-14 14:06:47 PDT
AXPropertyName::SelectedChildren for tree-role objects is not updated when their tree-item children become selected
Attachments
Patch
(10.35 KB, patch)
2022-10-14 14:20 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-14 14:07:00 PDT
<
rdar://problem/101186153
>
Tyler Wilcock
Comment 2
2022-10-14 14:20:29 PDT
Created
attachment 462993
[details]
Patch
EWS
Comment 3
2022-10-15 11:50:25 PDT
Committed
255587@main
(bcdb262e70e8): <
https://commits.webkit.org/255587@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462993
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug